Styling del gameplay

--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 </head>
 
 <body>
+  <div style="display: none">
+    <img id="apple-icon" src="./Apple-icon.png" >
+  </div>
   <main id="site-main"></main>
   <script src="./Snake.js"></script>
   <script src="./Food.js"></script>
