--- a/index.html
+++ b/index.html
@@ -5,12 +5,12 @@
   <title>Hello, world!</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="./styles/style.css">
 </head>
 
 <body>
   <div style="display: none">
-    <img id="apple-icon" src="./Apple-icon.png" >
+    <img id="apple-icon" src="./styles/Apple-icon.png" >
   </div>
   <main id="site-main"></main>
   <script src="./Snake.js"></script>
