Game over sound, finished game. I start with the ranking.

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
   <div style="display: none">
     <img id="apple-icon" src="./styles/Apple-icon.png" >
+    <img id="broccoli-icon" src="styles/broccoli.png" alt="">
   </div>
   <main id="site-main"></main>
   <script src="./Snake.js"></script>
